WexGit/Wex_DX/force-app/main/default/objects/Service_Settings__mdt/fields/MilestoneFirstResponseID__c.field-meta.xml
<CustomField>
    <fullName>MilestoneFirstResponseID__c</fullName>
    <label>MilestoneFirstResponseID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>