WexGit/Wex_DX/force-app/main/default/objects/Service_Settings__mdt/fields/PlusEntitlementID__c.field-meta.xml
<CustomField>
    <fullName>PlusEntitlementID__c</fullName>
    <label>PlusEntitlementID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>