WexGit/Wex_DX/force-app/main/default/objects/Service_Settings__mdt/fields/StandardEntitlementID__c.field-meta.xml
<CustomField>
    <fullName>StandardEntitlementID__c</fullName>
    <label>StandardEntitlementID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>