WexGit/Wex_DX/force-app/main/default/objects/Service_Settings__mdt/fields/Transaction_Dispute_Form_Template__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Dispute_Form_Template__c</fullName>
    <label>Transaction Dispute Form Template</label>
    <length>20</length>
    <type>Text</type>
</CustomField>